test_suite5/ALAN/test_suite/alan-2022-examples/passing/000000_deriv.alan
source H begin boolean array D; relax end
