test_suite5/ALAN/test_suite/alan-2022-examples/failing/000830_mutation.alan
source F begin boolean T1s, <> C; relax end
